# tp_wordle

./: CHANGELOG.md  wordle.cabal
app/: Main.hs
src/: CLI.hs  Core.hs  Wordle.hs
wordle/: LICENSE  wordle.cabal
wordle/app/: Main.hs
wordle/src/: CLI.hs  Core.hs  Game.hs
