cabal-version:      3.0
name:               wordle
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Rocio
maintainer:         rgonzalezcingolani@mail.utdt.edu
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md


common warnings
    ghc-options: -Wall

library
    import:           warnings

    exposed-modules:  
        Core,
        Wordle, 
        CLI
    build-depends:
        base ^>= 4.17.2.1,
        random ^>=1.2.0.0,
        tinyapp,
    hs-source-dirs:   src
    default-language: Haskell2010

executable wordle
    import:           warnings

    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        random ^>=1.2.0.0,
        wordle
    hs-source-dirs:   app
    ghc-options:      -threaded

    default-language: Haskell2010

test-suite wordle-test
    import:           warnings

    default-language: Haskell2010

    
    type:             exitcode-stdio-1.0

    hs-source-dirs:   test

    main-is:          Main.hs

    build-depends:
        base ^>=4.17.2.1,
        random ^>=1.2.0.0,
        wordle


